--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,11 @@ article{
 	text-align: center;
 }
 
-h1,h2,h3,h4,article{
+h1,
+h2,
+h3,
+h4,
+article{
 	font-family: 'Lato', sans-serif;
 	color:#2d3c49;
 }
@@ -24,7 +28,7 @@ h3{
 	font-size: 2em;
 }
 
-.featured img, .banner img{
+.featured-img, .banner-img{
 	margin:0 auto;
 }
 
@@ -46,6 +50,6 @@ h3{
 
 @media screen and (max-width: 767px){
 	.logo{
-		display:none;
+		float:left;
 	}
 }
